unpackaged/main/default/objects/litify_pm__Case_Type__c/litify_pm__Case_Type__c.object-meta.xml
<CustomObject>
    <label>Case Type</label>
    <nameField>
        <label>Case Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>