unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/litify_pm__Is_Local__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Local__c</fullName>
    <formula>TEXT(litify_pm__ExternalId__c) == &#39;0&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Local</label>
    <type>Checkbox</type>
</CustomField>