unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/litify_pm__lit_Contingency_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Contingency_Fee_Percentage__c</fullName>
    <description>Field to hold the Contingency Fee Rate</description>
    <label>Contingency Fee Percentage</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>