unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/litify_pm__Litify_com_ID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Litify_com_ID__c</fullName>
    <formula>TEXT( litify_pm__ExternalId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Litify.com ID</label>
    <type>Text</type>
</CustomField>