unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/litify_pm__Litigation_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Litigation_Type__c</fullName>
    <label>Litigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADA - American Disability Act</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Business Law</fullName>
            </value>
            <value>
                <fullName>Complex Litigation</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Employment Law</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Insurance Dispute</fullName>
            </value>
            <value>
                <fullName>Medical Malpractice</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Product Liability</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>TCPA</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Veteran Disability</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>