unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/litify_pm__Mapped_to_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Mapped_to_ExternalId__c</fullName>
    <formula>IF( ISBLANK(litify_pm__LRN_Case_Type__c),
  litify_pm__ExternalId__c,
  litify_pm__LRN_Case_Type__r.litify_pm__ExternalId__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped to ExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>