unpackaged/main/default/objects/litify_pm__Case_Type__c/fields/Matter_Plan__c.field-meta.xml
<CustomField>
    <fullName>Matter_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Plan</label>
    <referenceTo>litify_pm__Matter_Plan__c</referenceTo>
    <relationshipLabel>Case Types</relationshipLabel>
    <relationshipName>Case_Types</relationshipName>
    <type>Lookup</type>
</CustomField>