unpackaged/main/default/objects/litify_pm__Case_Type__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Is_Available__c</columns>
    <columns>litify_pm__Is_Local__c</columns>
    <columns>litify_pm__LRN_Case_Type__c</columns>
    <columns>litify_pm__Litify_com_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>